--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-install": "2.1.0",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -21,6 +22,7 @@
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mysql": "^2.13.0",
+    "nodemon": "^1.12.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
